--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-fastify": "^6.8.5",
     "@nestjs/swagger": "^3.1.0",
+    "abstract-blob-store": "^3.3.5",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
     "fastify-swagger": "^2.4.0",
+    "fs-blob-store": "^5.2.1",
+    "node-uuid": "^1.4.8",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
@@ -38,6 +41,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
+    "@types/uuid": "^3.4.6",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
