--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,7 +15,8 @@ task:
       e2e_test_script: npm run test:e2e
 
 docker_builder:
-  only_if: $CIRRUS_REPO_OWNER == 'moonad'
+  name: Docker
+  only_if: $CIRRUS_REPO_OWNER == 'moonad' && $CIRRUS_BRANCH == 'master'
   depends_on:
     - Typecheck
     - Lint
