fix: launch postgres on cirrus ci

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,6 +11,14 @@ task:
     - name: Lint
       lint_script: npm run lint
     - name: Test
+      additional_containers:
+        - name: postgres
+          image: postgres:11-alpine
+          port: 5432
+          env:
+            POSTGRES_USER: forall
+            POSTGRES_PASSWORD: forall
+            POSTGRES_DB: forall-dev
       test_script: npm test
       e2e_test_script: npm run test:e2e
 
