--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
     "fastify-swagger": "^2.4.0",
+    "nestjs-config": "^1.4.4",
     "node-uuid": "^1.4.8",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
