--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/platform-fastify": "^6.8.5",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.2.0",
+    "bull": "^3.12.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
     "fastify-swagger": "^2.4.0",
+    "nest-bull": "^0.9.0",
     "nestjs-config": "^1.4.4",
     "node-uuid": "^1.4.8",
     "pg": "^7.12.1",
@@ -42,6 +44,7 @@
     "@nestjs/cli": "^6.9.0",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
+    "@types/bull": "^3.10.6",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
